@@ -209,6 +209,14 @@ command to generate the output files.
     <glob pattern="*.gedcom"/>
     <alias type="text/gedcom"/>
   </mime-type>
+  <mime-type type="application/x-flash-video">
+    <_comment>Flash video</_comment>
+    <magic priority="50">
+      <match type="string" value="FLV" offset="0"/>
+    </magic>
+    <glob pattern="*.flv"/>
+    <alias type="flv-application/octet-stream"/>
+  </mime-type>
   <mime-type type="application/x-go-sgf">
     <sub-class-of type="text/plain"/>
     <!-- translators: a record is in this context a description of a board game
